network-policies/policies/allow-color-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-color-api
spec:
  podSelector:
    matchLabels:
      app: curl
  policyTypes:
  - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
               kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - podSelector:
            matchLabels:
              app: color-api
